--- a/Acme-Conference/src/main/webapp/views/report/tiles.xml
+++ b/Acme-Conference/src/main/webapp/views/report/tiles.xml
@@ -1,37 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<!-- 
- * tiles.xml
- *
- * Copyright (C) 2019 Universidad de Sevilla
- * 
- * The use of this project is hereby constrained to the conditions of the 
- * TDG Licence, a copy of which you may download from 
- * http://www.tdg-seville.info/License.html
- -->
+<!-- * tiles.xml * * Copyright (C) 2019 Universidad de Sevilla * * The use 
+	of this project is hereby constrained to the conditions of the * TDG Licence, 
+	a copy of which you may download from * http://www.tdg-seville.info/License.html -->
 
 <!DOCTYPE tiles-definitions PUBLIC
        "-//Apache Software Foundation//DTD Tiles Configuration 2.0//EN"
        "http://tiles.apache.org/dtds/tiles-config_2_0.dtd">
-       
+
 <tiles-definitions>
 
-	<definition name="message/edit" extends="master.page">
-		<put-attribute name="title" value="Send message" />
+	<definition name="report/edit" extends="master.page">
+		<put-attribute name="title" value="Edit report" />
 		<put-attribute name="body"
-			value="/views/message/edit.jsp" />
+			value="/views/report/edit.jsp" />
 	</definition>
 
-	<definition name="message/display" extends="master.page">
-		<put-attribute name="title" value="Display message" />
+	<definition name="report/display" extends="master.page">
+		<put-attribute name="title" value="Display report" />
 		<put-attribute name="body"
-			value="/views/message/display.jsp" />
+			value="/views/report/display.jsp" />
 	</definition>
 
-	<definition name="message/list" extends="master.page">
-		<put-attribute name="title" value="List of messages" />
+	<definition name="report/list" extends="master.page">
+		<put-attribute name="title" value="List of reports" />
 		<put-attribute name="body"
-			value="/views/message/list.jsp" />
+			value="/views/report/list.jsp" />
 	</definition>
-		
+
 </tiles-definitions>
