--- a/Acme-Conference/src/main/webapp/views/report/tiles_es.xml
+++ b/Acme-Conference/src/main/webapp/views/report/tiles_es.xml
@@ -10,22 +10,22 @@
 
 <tiles-definitions>
 
-	<definition name="message/edit" extends="master.page">
-		<put-attribute name="title" value="Enviar mensaje" />
+	<definition name="report/edit" extends="master.page">
+		<put-attribute name="title" value="Editar informe" />
 		<put-attribute name="body"
-			value="/views/message/edit.jsp" />
+			value="/views/report/edit.jsp" />
 	</definition>
 
-	<definition name="message/display" extends="master.page">
-		<put-attribute name="title" value="Mostrar mensaje" />
+	<definition name="report/display" extends="master.page">
+		<put-attribute name="title" value="Mostrar informe" />
 		<put-attribute name="body"
-			value="/views/message/display.jsp" />
+			value="/views/report/display.jsp" />
 	</definition>
 
-	<definition name="message/list" extends="master.page">
-		<put-attribute name="title" value="Lista de mensajes" />
+	<definition name="report/list" extends="master.page">
+		<put-attribute name="title" value="Lista de informes" />
 		<put-attribute name="body"
-			value="/views/message/list.jsp" />
+			value="/views/report/list.jsp" />
 	</definition>
 
 </tiles-definitions>
